# inmoov_ros2

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/py_bicep_angle/lib/py_bicep_angle/: listener  talker
install/py_bicep_angle/share/py_bicep_angle/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build  latest_list
src/py_bicep_angle/: package.xml  setup.cfg  setup.py
